# fwupd

data/: meson.build
data/pki/: meson.build
data/remotes.d/: meson.build
